# AnimeNamer

./: .gitignore  CMakeLists.txt  README.md
include/: Temp.h  VideoRename.h  common.h  subtitle.h  subtitle_rename.h  video.h  video_rename.h
src/: main.cpp  subtitle.cpp  subtitle_rename.cc  video.cpp  video_rename.cc
